Css/style.css
/* ... */
.pad {
  padding: 0;
}

.button {
  -ms-flex-item-align: center;
      -ms-grid-row-align: center;
      align-self: center;
  text-align: center;
  vertical-align: inherit;
}

.button a:hover {
  color: white;
}

body {
  font-family: Inter;
  font-size: 20px;
  font-style: normal;
  font-weight: 400;
  line-height: 50px;
  letter-spacing: 0em;
  color: white;
}

a {
  text-decoration: none;
  color: white;
}

li {
  list-style: none;
}

.wrapper {
  background-color: black;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}

.container {
  max-width: 1440px;
  margin: 0 auto;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}

.header__row {
  padding: 0 20px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  background: url("/Assets/img/bg.jpg");
  background-repeat: no-repeat;
  background-position: top;
  background-size: inherit;
}

.header__logo {
  padding-top: 20px;
}

.header__logo img {
  width: 50px;
}

.header__menu-container {
  padding-top: 20px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
}

.header__menu li {
  display: inline;
  margin-right: 25px;
}

.header__menu li a:hover {
  color: #bdae82;
}

.header__menu li:last-child {
  margin-right: 0;
}

.header__language {
  margin-left: 41px;
}

.header__language a:hover {
  color: #bdae82;
}

.header__burger {
  position: relative;
  right: 0px;
  top: 5px;
}

.header__burger::after, .header__burger::before {
  content: "";
  width: 30px;
  height: 2px;
  background-color: #fff;
  display: inline-block;
}

.header__burger::after {
  position: absolute;
  top: 10px;
  right: 64px;
  background-color: yellow;
}

.header__burger span::after {
  content: "";
  width: 30px;
  height: 2px;
  background-color: #fff;
  display: inline-block;
  position: absolute;
  top: 30px;
  right: 64px;
}

.header__burger::before {
  position: absolute;
  top: 20px;
  right: 64px;
  background-color: red;
}

@media (min-width: 768px) {
  .header__burger {
    display: none;
  }
}

@media (max-width: 920px) {
  .header li,
  .header span {
    font-size: 18px;
  }
}

@media (max-width: 768px) {
  .header__row {
    background-position: -1px -41px;
    background-size: 978px;
  }
  .header__language {
    margin-right: 120px;
  }
  .header__language a {
    font-size: 20px;
  }
  .header__logo {
    margin-left: 60px;
  }
  .header__menu {
    display: none;
  }
  .header__menu {
    top: 0;
    left: 100%;
    position: fixed;
    width: 100%;
    height: 100%;
    background-color: black;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-transition: all 0.4s ease-in-out;
    transition: all 0.4s ease-in-out;
  }
  .header__menu ul {
    margin-top: 134px;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    margin-left: 15%;
  }
  .header__menu li {
    display: block;
    color: white;
    font-size: 35px;
    line-height: 73px;
    margin-bottom: 16px;
  }
  .header .active {
    left: 25%;
    -webkit-transition: all 0.4s ease-in-out;
    transition: all 0.4s ease-in-out;
  }
  .header .active__burger::before {
    -webkit-transform: rotate(45deg);
            transform: rotate(45deg);
  }
}

@media (max-width: 420px) {
  .header__row {
    padding: 0px;
  }
  .header__logo {
    margin: 10px;
  }
  .header__language {
    margin: 20px;
    margin-top: 11px;
  }
  .header__burger {
    top: 15px;
    right: 40px;
  }
}

@media (max-width: 620px) {
  .header .active {
    left: 0%;
    -webkit-transition: all 0.4s ease-in-out;
    transition: all 0.4s ease-in-out;
  }
}

.img-container {
  max-width: 100%;
}

.title-line {
  text-align: center;
  margin-bottom: 60px;
  color: #bdae82;
  font-family: Merriweather;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  font-size: 27px;
  font-style: normal;
  font-weight: 700;
  line-height: 80px;
  letter-spacing: 0em;
}

.title-line h2 {
  position: relative;
}

.title-line h2::before {
  content: "";
  display: inline-block;
  width: 280px;
  background-color: #bdae82;
  height: 2px;
  margin: 0 20px;
  vertical-align: middle;
}

.title-line h2::after {
  content: "";
  display: inline-block;
  width: 280px;
  height: 2px;
  background-color: #bdae82;
  margin: 0 20px;
  vertical-align: middle;
}

@media (max-width: 768px) {
  .title-line {
    text-align: center;
    font-size: 20px;
    font-weight: 700;
    line-height: 40px;
    text-align: center;
    max-width: 420px;
  }
  .title-line h2::before,
  .title-line h2::after {
    content: "";
    max-width: 20%;
    height: 2px;
    display: inline-block;
    background-color: #bdae82;
    vertical-align: middle;
    margin-left: 0px;
    margin-right: 0;
  }
}

@media (max-width: 610px) {
  .title-line {
    font-size: 16px;
  }
  .title-line h2::before h2,
  .title-line h2::after h2 {
    width: 140px;
  }
}

.hero__row {
  background-image: url("/Assets/img/bg.jpg");
  background-position: center -90px;
  background-size: cover;
  background-repeat: no-repeat;
  padding: 160px 0px 330px 80px;
  margin-bottom: 97px;
}

@media (max-width: 768px) {
  .hero__row {
    padding: 25px 0px 245px 60px;
    height: 230px;
    background-image: url("/Assets/img/bglittle.jpg");
  }
}

@media (max-width: 470px) {
  .hero__row {
    padding: 160px 0 330px 20px;
  }
}

.hero__text {
  max-width: 37%;
}

.hero__title {
  font-family: Merriweather;
  font-style: normal;
  font-weight: 700;
  line-height: 120px;
  letter-spacing: 0em;
  text-align: left;
  margin-bottom: 13px;
}

.hero__title h1 {
  font-size: 60px;
}
/* ... */

